--- a/renderer/units/JSON Formatter/import.css
+++ b/renderer/units/JSON Formatter/import.css
@@ -13,12 +13,27 @@
     tab-size : 4;
 }
 
-#json-formatter-unit .interface
+#json-formatter-unit .actions
+{
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 0.5em 0 -0.5em 0;
+}
+
+#json-formatter-unit .action + .action
+{
+    margin-left: 0.5em;
+}
+
+#json-formatter-unit .options
 {
     padding: 0.5em 0 0.75em 0;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin: 0;
 }
