--- a/renderer/units/JSON Formatter/import.css
+++ b/renderer/units/JSON Formatter/import.css
@@ -18,14 +18,19 @@
     padding: 0;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
-    margin: 0.5em 0 -0.5em 0;
+    margin: 0.5em 0;
 }
 
 #json-formatter-unit .action + .action
 {
-    margin-left: 0.5em;
+    margin-left: 0.75em;
+}
+
+#json-formatter-unit .dummy
+{
+    padding: 0 4.7em;
 }
 
 #json-formatter-unit .options
@@ -41,6 +46,11 @@
 #json-formatter-unit .option + .option
 {
     margin-left: 0.5em;
+}
+
+#json-formatter-unit .output-string
+{
+    margin-bottom: 0.25em;
 }
 
 #json-formatter-unit .rendering-error
