--- a/renderer/units/LaTeX Math Renderer/import.css
+++ b/renderer/units/LaTeX Math Renderer/import.css
@@ -16,19 +16,28 @@
     padding: 0;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    margin: 0.5em 0 -0.5em 0;
+    margin: 0.5em 0;
 }
 
+#latex-math-renderer-unit .action-group
+{
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#latex-math-renderer-unit .action-group + .action-group,
 #latex-math-renderer-unit .action + .action
 {
-    margin-left: 0.5em;
+    margin-left: 0.75em;
 }
 
 #latex-math-renderer-unit .options
 {
-    padding: 0.5em 0 0.75em 0;
+    padding: 0.5em 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
