--- a/renderer/units/Text Scratchpad/import.css
+++ b/renderer/units/Text Scratchpad/import.css
@@ -7,9 +7,36 @@
     line-height: normal;
     width: 100%;
     padding: 0.25em 0.5em;
-    margin: 0.5em 0;
     overflow-y: scroll;
     resize: vertical;
     tab-size : 4;
 }
 
+#text-scratchpad-unit .actions
+{
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0.5em 0;
+}
+
+#text-scratchpad-unit .action-group
+{
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#text-scratchpad-unit .action-group + .action-group,
+#text-scratchpad-unit .action + .action
+{
+    margin-left: 0.75em;
+}
+
+#text-scratchpad-unit .plain-panel
+{
+    padding-bottom: 1.25em;
+}
