--- a/renderer/units/Unicode Inspector/import.css
+++ b/renderer/units/Unicode Inspector/import.css
@@ -10,20 +10,25 @@
     padding: 0;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
-    margin: -1.5em 0 0 0;
+    margin: 0;
 }
 
 #unicode-inspector-unit .action + .action
 {
-    margin-left: 0.5em;
+    margin-left: 0.75em;
 }
 
 #unicode-inspector-unit .output-characters-data table,
 #unicode-inspector-unit .output-code-points-data table
 {
     margin: 1.5em 0 1em 0;
+}
+
+#unicode-inspector-unit .dummy
+{
+    padding: 0 4.7em;
 }
 
 #unicode-inspector-unit .data-list
@@ -53,7 +58,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 5em;
     height: 1em;
-    width: 1em;
+    min-width: 1em;
     text-align: center;
     vertical-align: middle;
     line-height: 1em;
