--- a/renderer/units/Digital Clock/import.css
+++ b/renderer/units/Digital Clock/import.css
@@ -8,7 +8,7 @@
 #digital-clock-unit .interface
 {
     text-align: center;
-    margin-bottom: 1.5em;
+    margin: 1.5em 0;
 }
 
 #digital-clock-unit .options
@@ -38,7 +38,6 @@
     text-align: center;
     background-color: white;
     color: var(--color);
-    margin-bottom: 1em;
     line-height: 1.5em;
     padding: 0.5em;
     overflow-x: auto;
