--- a/renderer/units/Unicode Inspector/import.css
+++ b/renderer/units/Unicode Inspector/import.css
@@ -50,7 +50,7 @@
 
 #unicode-inspector-unit .data-list .symbol
 {
-    font-family: "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
     font-size: 5em;
     height: 1em;
     min-width: 1em;
@@ -79,7 +79,7 @@
 #unicode-inspector-unit .input-characters,
 #unicode-inspector-unit .output-characters
 {
-    font-family: "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
     font-size: 5em;
     padding: 0.2em;
     width: 100%;
