Updated app to version 1.7.0

--- a/renderer/units/CIDR Calculator/import.css
+++ b/renderer/units/CIDR Calculator/import.css
@@ -9,7 +9,7 @@
 #cidr-calculator-unit input,
 #cidr-calculator-unit textarea
 {
-    font-family: Monaco, monospace;
+    font-family: Monaco, "Noto Mono", monospace;
     font-size: 13px;
     line-height: 1.333em;
 }
