--- a/renderer/units/Departments of France/import.css
+++ b/renderer/units/Departments of France/import.css
@@ -62,7 +62,7 @@
 
 #departments-of-france-unit td.code
 {
-    font-family: Monaco, monospace;
+    font-family: Monaco, "Noto Mono", monospace;
 }
 
 #departments-of-france-unit td.message
