--- a/renderer/units/ISO Language Codes/import.css
+++ b/renderer/units/ISO Language Codes/import.css
@@ -62,7 +62,7 @@
 
 #iso-language-codes-unit td.code
 {
-    font-family: Monaco, monospace;
+    font-family: Monaco, "Noto Mono", monospace;
 }
 
 #iso-language-codes-unit td.message
