--- a/renderer/units/JavaScript Runner/import.css
+++ b/renderer/units/JavaScript Runner/import.css
@@ -5,7 +5,7 @@
 {
     /* display: block; */
     vertical-align: top;
-    font-family: Monaco, monospace;
+    font-family: Monaco, "Noto Mono", monospace;
     font-size: 13px;
     line-height: 1.333em;
     width: 100%;
