--- a/renderer/units/Roman Numerals/import.css
+++ b/renderer/units/Roman Numerals/import.css
@@ -9,7 +9,7 @@
 #roman-numerals-unit code,
 #roman-numerals-unit input
 {
-    font-family: Monaco, monospace;
+    font-family: Monaco, "Noto Mono", monospace;
     font-size: 1em;
     line-height: 1.333em;
 }
