--- a/renderer/units/Text Scratchpad/import.css
+++ b/renderer/units/Text Scratchpad/import.css
@@ -2,7 +2,7 @@
 
 #text-scratchpad-unit .text-string
 {
-    font-family: Monaco, monospace;
+    font-family: Monaco, "Noto Mono", monospace;
     font-size: 13px;
     line-height: 1.333em;
     width: 100%;
