--- a/renderer/styles.css
+++ b/renderer/styles.css
@@ -472,6 +472,15 @@ input[type=button]:active
     /* box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.25); */
 }
 
+button:disabled,
+input[type=button]:disabled
+{
+    color: gray;
+    border: gray 1px solid;
+    background-color: white;
+    pointer-events: none;
+}
+
 select
 {
     font-size: 1em;
