--- a/renderer/units/Emoji Data Finder/import.css
+++ b/renderer/units/Emoji Data Finder/import.css
@@ -1,13 +1,5 @@
 @charset "utf-8";
 
-#emoji-data-finder-unit .action-group
-{
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
 #emoji-data-finder-unit .actions
 {
     padding: 0;
@@ -15,24 +7,72 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 0.75em 0;
+    margin: 0.25em 0;
 }
 
-#emoji-data-finder-unit .action-group + .action-group,
-#emoji-data-finder-unit .action + .action
+#emoji-data-finder-unit .action-group
+{
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0.25em 0 0.5em 0;
+    white-space: nowrap;
+}
+
+#emoji-data-finder-unit .action + .action,
+#emoji-data-finder-unit .action-group + .action-group
 {
     margin-left: 1em;
 }
 
 #emoji-data-finder-unit .search-string
 {
-    width: 12em;
+    width: 16em;
     font-size: 1em;
     background: white;
     border: 1px solid var(--color-border);
     border-radius: 0.25em;
     padding: 0.25em 0.5em;
-    margin-right: -0.5em;
+}
+
+#emoji-data-finder-unit .search-string.error
+{
+    color: var(--color-error);
+}
+
+#emoji-data-finder-unit input[type=checkbox]
+{
+    display: none;
+}
+
+#emoji-data-finder-unit input[type=checkbox] + svg
+{
+    font-size: 1.7em;
+    line-height: 1em;
+    text-align: center;
+    padding: 1px;
+    width: 1em;
+    height: 1em;
+    vertical-align: middle;
+    background: white;
+    border: 1px solid var(--color-accent);
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.25);
+    color: var(--color-accent);
+    fill: var(--color-accent);
+}
+
+#emoji-data-finder-unit input[type=checkbox]:checked + svg
+{
+    background: var(--color-accent) linear-gradient(hsla(0, 0%, 100%, 0.15), hsla(0, 0%, 100%, 0.15));
+    box-shadow: inset 1px 1px 1px rgba(0,0,0,0.5);
+    color: white;
+    fill: white;
+}
+
+#emoji-data-finder-unit .search-group .action
+{
+    margin-left: 0.5em;
 }
 
 #emoji-data-finder-unit .input-string
@@ -42,16 +82,28 @@
     padding: 0 0.2em;
     width: 100%;
     tab-size : 4;
-    margin: 0.25em 0;
+    margin: 0.25em 0 0.125em 0;
     line-height: 1.333em;
     resize: vertical;
+    overflow-y: scroll;
+}
+
+#emoji-data-finder-unit .hit-count
+{
+    text-align: left;
+    color: gray;
 }
 
 #emoji-data-finder-unit .emoji-data
 {
     user-select: auto;
     background-color: white;
-    margin: 1em 0 0.75em 0;
+    margin: 1em 0 0.5em 0;
+}
+
+#emoji-data-finder-unit .emoji-data .non-fully-qualified
+{
+    color: gray;
 }
 
 #emoji-data-finder-unit .emoji-data .emoji
@@ -105,10 +157,4 @@
 {
     font-weight: bold;
     margin: 1.2em 0 1em 0;
-}
-
-#emoji-data-finder-unit .info-icon
-{
-    width: 8em;
-    height: 8em;
 }
