--- a/renderer/units/LaTeX Math Renderer/import.css
+++ b/renderer/units/LaTeX Math Renderer/import.css
@@ -76,6 +76,7 @@
     color: var(--color-error);
     text-align: center;
     padding: 0.25em 0.5em;
+    user-select: auto;
 }
 
 #latex-math-renderer-unit summary
