--- a/renderer/units/Unicode Inspector/import.css
+++ b/renderer/units/Unicode Inspector/import.css
@@ -15,6 +15,11 @@
     margin: 0;
 }
 
+#unicode-inspector-unit .actions.code-points-actions
+{
+    justify-content: space-between;
+}
+
 #unicode-inspector-unit .action + .action
 {
     margin-left: 0.75em;
@@ -80,10 +85,13 @@
 #unicode-inspector-unit .output-characters
 {
     font-family: sans-serif;
-    font-size: 5em;
-    padding: 0.2em;
+    font-size: 2.5em;
+    padding: 0 0.2em;
     width: 100%;
     tab-size : 4;
+    line-height: 1.333em;
+    resize: vertical;
+    overflow-y: scroll;
 }
 
 #unicode-inspector-unit .input-code-points,
@@ -95,6 +103,26 @@
     padding: 0.2em 0.4em;
     width: 100%;
     tab-size : 4;
+}
+
+#unicode-inspector-unit .characters-to-code-points
+{
+    margin: 1em 0;
+}
+
+#unicode-inspector-unit .input-characters
+{
+    margin: 0 0 0.25em 0;
+}
+
+#unicode-inspector-unit .code-points-to-characters
+{
+    margin: 1em 0 0.75em 0;
+}
+
+#unicode-inspector-unit .input-code-points
+{
+    margin: 0 0 1em 0;
 }
 
 #unicode-inspector-unit summary
