--- a/renderer/units/Emoji Picture Book/import.css
+++ b/renderer/units/Emoji Picture Book/import.css
@@ -9,19 +9,20 @@
 {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    /* align-items: center; */
+    justify-content: space-between;
+    align-items: center;
     margin-bottom: -0.5em;
 }
 
-#emoji-picture-book-unit .option
+#emoji-picture-book-unit .select-group
 {
-    text-align: left;
+    margin: 0 1em 0 0;
 }
 
-#emoji-picture-book-unit .option + .option
+#emoji-picture-book-unit .size-range
 {
-    margin-left: 0.75em;
+    width: 16em;
+    margin: 0.1em 0;
 }
 
 #emoji-picture-book-unit .plain-panel
@@ -42,7 +43,7 @@
     border-radius: inherit;
     margin: 0;
     font-family: "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", sans-serif;
-    font-size: 7.2em;
+    /* font-size: 96px; */
     line-height: 1.4em;
     padding: 0.2em;
     width: 100%;
