--- a/renderer/units/Unicode Data Finder/import.css
+++ b/renderer/units/Unicode Data Finder/import.css
@@ -169,10 +169,10 @@
     font-family: sans-serif;
     text-align: center;
     vertical-align: middle;
-    font-size: 2.5em;
+    font-size: 36px;
     line-height: 1.2em;
     max-width: 1em;
-    padding: 0.25em;
+    padding: 0.2em;
 }
 
 #unicode-data-finder-unit .search-by-name-data .code-point
