--- a/renderer/units/Unicode Inspector/import.css
+++ b/renderer/units/Unicode Inspector/import.css
@@ -25,10 +25,14 @@
     margin-left: 0.75em;
 }
 
-#unicode-inspector-unit .output-characters-data table,
+#unicode-inspector-unit .output-characters-data table
+{
+    margin: 1.25em 0 1em 0;
+}
+
 #unicode-inspector-unit .output-code-points-data table
 {
-    margin: 1.5em 0 1em 0;
+    margin: 1em 0 1em 0;
 }
 
 #unicode-inspector-unit .data-list
@@ -56,7 +60,7 @@
 #unicode-inspector-unit .data-list .symbol
 {
     font-family: sans-serif;
-    font-size: 5em;
+    font-size: 72px;
     height: 1em;
     min-width: 1em;
     text-align: center;
@@ -90,13 +94,14 @@
 #unicode-inspector-unit .output-characters
 {
     font-family: sans-serif;
-    font-size: 2.5em;
+    font-size: 36px;
     padding: 0 0.2em;
     width: 100%;
     tab-size : 4;
-    line-height: 1.333em;
+    line-height: 48px;
     resize: vertical;
     overflow-y: scroll;
+    min-height: calc(1px + 48px + 48px + 1px);
 }
 
 #unicode-inspector-unit .input-code-points,
