Updated app to version 1.8.5

--- a/renderer/units/JavaScript Runner/import.css
+++ b/renderer/units/JavaScript Runner/import.css
@@ -75,7 +75,7 @@
 
 #javascript-runner-unit .built-in-functions code
 {
-    /* user-select: auto; */
+    user-select: text;
     color: inherit;
     background: var(--color-accent) linear-gradient(hsla(0, 0%, 100%, 0.8), hsla(0, 0%, 100%, 0.8));
 }
