--- a/renderer/units/Roman Numerals/import.css
+++ b/renderer/units/Roman Numerals/import.css
@@ -3,7 +3,7 @@
 #roman-numerals-unit code,
 #roman-numerals-unit .notes ul
 {
-    user-select: auto;
+    user-select: text;
 }
 
 #roman-numerals-unit code,
