--- a/renderer/units/ISO Language Codes/import.css
+++ b/renderer/units/ISO Language Codes/import.css
@@ -24,7 +24,7 @@
 
 #iso-language-codes-unit tr
 {
-    user-select: auto;
+    user-select: text;
 }
 
 #iso-language-codes-unit tr:nth-child(even)
