--- a/renderer/units/JSON Formatter/import.css
+++ b/renderer/units/JSON Formatter/import.css
@@ -11,6 +11,7 @@
     padding: 0 0.5em;
     white-space: pre;
     tab-size : 4;
+    overscroll-behavior: contain;
 }
 
 #json-formatter-unit .actions
