--- a/renderer/units/LaTeX Math Renderer/import.css
+++ b/renderer/units/LaTeX Math Renderer/import.css
@@ -9,6 +9,7 @@
     resize: vertical;
     padding: 0 0.5em;
     tab-size : 4;
+    overscroll-behavior: contain;
 }
 
 #latex-math-renderer-unit .actions
@@ -76,7 +77,7 @@
     color: var(--color-error);
     text-align: center;
     padding: 0.25em 0.5em;
-    user-select: auto;
+    user-select: text;
 }
 
 #latex-math-renderer-unit summary
