Updated app to version 1.10.2

--- a/renderer/styles.css
+++ b/renderer/styles.css
@@ -280,7 +280,7 @@ kbd
     color: var(--color-strong);
     border: none;
     background-color: transparent;
-    cursor: default;
+    cursor: pointer;
 }
 
 .sidebar .nav-button:hover:not(.is-selected)
