--- a/renderer/units/Chinese Zodiac/import.css
+++ b/renderer/units/Chinese Zodiac/import.css
@@ -25,6 +25,7 @@
 #chinese-zodiac-unit tr
 {
     user-select: text;
+    cursor: text;
 }
 
 #chinese-zodiac-unit tr:nth-child(even)
@@ -75,10 +76,10 @@
 {
     font-family: Monaco, "Noto Mono", monospace;
     font-size: 0.96em;
-    white-space: nowrap;
     max-width: 0;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 #chinese-zodiac-unit td.message
