--- a/renderer/units/Color Names/import.css
+++ b/renderer/units/Color Names/import.css
@@ -38,6 +38,7 @@
 {
     vertical-align: middle;
     user-select: text;
+    cursor: text;
 }
 
 #color-names-unit th,
@@ -83,6 +84,9 @@
     border-radius: 0.25em;
     width: 100%;
     height: 3.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #color-names-unit td.message
