--- a/renderer/units/Departments of France/import.css
+++ b/renderer/units/Departments of France/import.css
@@ -63,7 +63,7 @@
 
 #departments-of-france-unit td.code
 {
-    font-family: Monaco, "Noto Mono", monospace;
+    font-family: Monaco, "DejaVu Sans Mono", "Noto Mono", monospace;
 }
 
 #departments-of-france-unit td.message
