--- a/renderer/units/Color Names/import.css
+++ b/renderer/units/Color Names/import.css
@@ -61,7 +61,7 @@
 
 #color-names-unit td.hex
 {
-    font-family: Monaco, "DejaVu Sans Mono", "Noto Mono", monospace;
+    font-family: var(--monospace-family);
 }
 
 #color-names-unit th.color
