--- a/renderer/units/Chemical Elements/import.css
+++ b/renderer/units/Chemical Elements/import.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+#chemical-elements-unit
+{
+    font-size: 15px;
+}
+
 #chemical-elements-unit .interface
 {
     text-align: center;
@@ -18,7 +23,7 @@
 
 #chemical-elements-unit table
 {
-    font-size: 15px;
+    font-size: 1em;
     color: var(--color);
     margin: 0.5em 0;
 }
