--- a/renderer/units/Chinese Zodiac/import.css
+++ b/renderer/units/Chinese Zodiac/import.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+#chinese-zodiac-unit
+{
+    font-size: 15px;
+}
+
 #chinese-zodiac-unit .interface
 {
     text-align: center;
@@ -18,6 +23,7 @@
 
 #chinese-zodiac-unit table
 {
+    font-size: 1em;
     color: var(--color);
     margin: 0.5em 0;
 }
@@ -75,7 +81,7 @@
 #chinese-zodiac-unit td.years
 {
     font-family: var(--monospace-family);
-    font-size: 0.96em;
+    font-size: 14px;
     max-width: 0;
     overflow: hidden;
     text-overflow: ellipsis;
