--- a/renderer/units/Color Names/import.css
+++ b/renderer/units/Color Names/import.css
@@ -83,7 +83,7 @@
     border: 1px solid var(--color-border);
     border-radius: 0.25em;
     width: 100%;
-    height: 3.5em;
+    height: 44px;
     display: flex;
     justify-content: center;
     align-items: center;
